tests/baselines/reference/mergedInterfacesWithInheritedPrivates3.errors.txt
mergedInterfacesWithInheritedPrivates3.ts(9,11): error TS2320: Interface 'A' cannot simultaneously extend types 'C' and 'C2'.
  Named property 'x' of types 'C' and 'C2' are not identical.
mergedInterfacesWithInheritedPrivates3.ts(31,15): error TS2320: Interface 'A' cannot simultaneously extend types 'C' and 'C2'.
  Named property 'x' of types 'C' and 'C2' are not identical.


==== mergedInterfacesWithInheritedPrivates3.ts (2 errors) ====
    class C {
        private x: number;
    }
    
    class C2 {
        private x: number;
    }
    
    interface A extends C { // error
              ~
!!! error TS2320: Interface 'A' cannot simultaneously extend types 'C' and 'C2'.
!!! error TS2320:   Named property 'x' of types 'C' and 'C2' are not identical.
        y: string;
    }
    
    interface A extends C2 { 
        z: string;
    }
    
    class D extends C implements A { // error
        y: string;
        z: string;
    }
    
    module M {
        class C {
            private x: string;
        }
    
        class C2 {
            private x: number;
        }
    
        interface A extends C { // error, privates conflict
                  ~
!!! error TS2320: Interface 'A' cannot simultaneously extend types 'C' and 'C2'.
!!! error TS2320:   Named property 'x' of types 'C' and 'C2' are not identical.
            y: string;
        }
    
        interface A extends C2 {
            z: string;
        }
    }